refactor: 테스트를 위한 sql 파일의 테이블 생성과 데이터 삽입을 분리